fix vid z-index & end link

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ background: grey;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 0;
 }
 
 /* #homebgvideo {
